# RealTimeLink

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FileHandle/: CMakeLists.txt
FileHandle/header/: FileHandler.h  ReadFromFile.h  WriteChunk.h  WriteToFile.h
FileHandle/source/: WriteChunk.cpp  WriteToFile.cpp
Process/: CMakeLists.txt
Process/source/: Hamming.cpp  Interleaving.cpp
header/: FileHandler.h  Hamming.h  Interleaving.h  Main.h  ProcessData.h  ReadChunk.h  ReadFromFile.h  WriteChunk.h  WriteToFile.h
source/: FileHandler.cpp  FileHandler.hpp  Hamming.cpp  Hamming.hpp  HammingProcess.hpp  Interleaving.cpp  Interleaving.hpp  InterleavingProcess.hpp  Main.cpp  ProcessData.cpp  ProcessData.hpp  ReadChunk.cpp  ReadChunk.hpp  ReadFromFile.cpp  ReadFromFile.hpp  WriteChunk.cpp  WriteChunk.hpp  WriteToFile.cpp  WriteToFile.hpp
test/: CMakeLists.txt  ProcessDataTests.cpp  ReadFromFileInputDataTest.cpp  ReadFromFileTests.cpp  SimpleTests.cpp  WriteToFileTests.cpp
test/source/: MainTests.cpp  ProcessDataTests.cpp  WriteToFileTests.cpp
